{{$NEXT}}

    [ API CHANGES ]
    * Second level of deprecation for mime_type method.
      (Alberto Simões)

    [ DOCUMENTATION ]
    * Improve Serializers documentation
      (Damien Krotkine)

1.3050      20.05.2011
    ** Codename: The Captain Hook Adventure // Franck Cuny **

    [ ENHANCEMENTS ]
    * No functional changes, just releasing as stable.

    [ DOCUMENTATION ]
    * Improve Dancer documentation
      (Damien Krotkine)

1.3049_01   14.05.2011

    [ API CHANGES ]
    * Deprecation of 'logger' (use set). (Alberto Simões)
    * Deprecate 'layout' (use set). (Alberto Simões)
    * Definitely remove plack_middlewares HashRef deprecation.
      (Alberto Simões & Damien Krotkine)

    [ BUG FIXES ]
    * Unbreaking auto_page somewhat - the catch-all route added will
      pass unless a suitable view exists.  This means that routes like
      /foo are not obscured, and made up URLs will result in a proper
      404, not 500.  A little more work required here, though. 
      (David Precious)
    * Anchor regular expression routes. Before regular expressions
      were matching anywhere in the URL.
      (Alberto Simões)

    [ ENHANCEMENTS ]
    * GH #519: remove redundant lines from CSS
      (Alberto Simões)
    * When scaffolding an app, show a warning if YAML not installed.
      Prompted by Issue 496.  (David Precious)
    * Hooks! add new positions for hooks, and possibility to create
      your own hooks inside your application and your plugin.
      (Franck Cuny)
    * Don't try to read/set session vars with empty/undef keys.  It
      doesn't make sense to do so, and can cause warnings elsewhere.
      (David Precious)
    * Check HTTP status code/alias passed to status() is valid;
      previously, and invalid code would result in the response status
      being unset
      (David Precious, prompted on IRC by jonas)
    * Lowercase status aliases and swap spaces for underscores before
      trying to match